[gd_scene load_steps=36 format=3 uid="uid://b1w75hcev2rsf"]

[ext_resource type="Script" path="res://Levels/Dungeon1/DarkWizard/scripts/DarkWizardBoss.gd" id="1_4pauo"]
[ext_resource type="Texture2D" uid="uid://bkenvsnuofm88" path="res://Levels/Dungeon1/DarkWizard/sprites/boss-cloak.png" id="2_85oy2"]
[ext_resource type="Texture2D" uid="uid://cqcel3b0ff6no" path="res://Levels/Dungeon1/DarkWizard/sprites/boss-hand.png" id="3_okt5r"]
[ext_resource type="Script" path="res://General Nodes/HurtBox/hurt_box.gd" id="4_f8bu0"]
[ext_resource type="Script" path="res://General Nodes/HitBox/hit_box.gd" id="5_dsruw"]
[ext_resource type="AudioStream" uid="uid://d2gvp3pnmvvn0" path="res://Levels/Dungeon1/DarkWizard/audio/boss_destroy.wav" id="6_rylyn"]
[ext_resource type="PackedScene" uid="uid://brdgwmw38vuyy" path="res://Levels/Dungeon1/DarkWizard/energy_beam.tscn" id="7_7c4rs"]
[ext_resource type="Script" path="res://General Nodes/PersistentDataHandler/persistant_data_handler.gd" id="8_m3ade"]
[ext_resource type="Script" path="res://Enemies/scripts/Enemy_State_Machine.gd" id="9_0ueei"]
[ext_resource type="Script" path="res://Levels/Dungeon1/DarkWizard/scripts/Idle.gd" id="10_opwkl"]

[sub_resource type="Gradient" id="Gradient_veq3y"]
offsets = PackedFloat32Array(0.561644, 0.748858, 1)
colors = PackedColorArray(1, 0, 0, 0, 1, 0, 0, 1, 1, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2yd2r"]
gradient = SubResource("Gradient_veq3y")
width = 32
height = 32
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_2teca"]
radius = 24.0

[sub_resource type="Gradient" id="Gradient_he5pg"]
offsets = PackedFloat32Array(0.438356, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_lnd1b"]
gradient = SubResource("Gradient_he5pg")
width = 48
height = 24
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="Animation" id="Animation_q2xxw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}

[sub_resource type="Animation" id="Animation_g0sqp"]
resource_name = "down"
length = 0.3
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 2]
}

[sub_resource type="Animation" id="Animation_v1n88"]
resource_name = "side"
length = 0.3
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6, 8]
}

[sub_resource type="Animation" id="Animation_5yhbh"]
resource_name = "up"
length = 0.3
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [3, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lvipt"]
_data = {
"RESET": SubResource("Animation_q2xxw"),
"down": SubResource("Animation_g0sqp"),
"side": SubResource("Animation_v1n88"),
"up": SubResource("Animation_5yhbh")
}

[sub_resource type="Gradient" id="Gradient_w5g3e"]
offsets = PackedFloat32Array(0.210046, 1)
colors = PackedColorArray(0.772549, 0, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_adswo"]
gradient = SubResource("Gradient_w5g3e")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_vpvgu"]
radius = 13.0

[sub_resource type="CircleShape2D" id="CircleShape2D_evgg0"]
radius = 25.0

[sub_resource type="Animation" id="Animation_etdke"]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(0, -34), Vector2(0, -40), Vector2(0, -34)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite2D/Hand01:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Sprite2D/Hand01:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(20, 4), Vector2(20, 7), Vector2(20, 4)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Sprite2D/Hand02:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Sprite2D/Hand02:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(-20, 4), Vector2(-20, 7), Vector2(-20, 4)]
}

[sub_resource type="Animation" id="Animation_o8j27"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -34)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite2D/Hand01:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Sprite2D/Hand01:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(20, 4)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Sprite2D/Hand02:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Sprite2D/Hand02:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-20, 4)]
}

[sub_resource type="Animation" id="Animation_bd22k"]
resource_name = "appear"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(0, -40), Vector2(0, -30), Vector2(0, -34)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite2D/Hand01:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Sprite2D/Hand01:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(20, 4), Vector2(20, 7), Vector2(20, 4)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Sprite2D/Hand02:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Sprite2D/Hand02:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(-20, 4), Vector2(-20, 7), Vector2(-20, 4)]
}

[sub_resource type="Animation" id="Animation_eajbo"]
resource_name = "cast_spell"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 2, 2.2, 2.6),
"transitions": PackedFloat32Array(-2, -2, -2, -2, -2),
"update": 0,
"values": [Vector2(0, -34), Vector2(0, -34), Vector2(0, -30), Vector2(0, -38), Vector2(0, -34)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 2, 2.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(2, 0.8, 1.2, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite2D/Hand01:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.6, 1.9, 2.1, 2.6, 2.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 1, 0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Sprite2D/Hand01:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.8, 2.2, 2.3, 2.6),
"transitions": PackedFloat32Array(-2, -2, -2, -2, -2),
"update": 0,
"values": [Vector2(20, 4), Vector2(20, -11), Vector2(20, 7), Vector2(20, 7), Vector2(20, 4)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Sprite2D/Hand02:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.6, 1.9, 2.1, 2.6, 2.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 1, 0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Sprite2D/Hand02:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1.8, 2.2, 2.3, 2.6),
"transitions": PackedFloat32Array(-2, -2, -2, -2, -2),
"update": 0,
"values": [Vector2(-20, 4), Vector2(-20, -11), Vector2(-20, 7), Vector2(-20, 7), Vector2(-20, 4)]
}

[sub_resource type="Animation" id="Animation_bqut6"]
resource_name = "destroy"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2.9),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(0, -34), Vector2(0, -40), Vector2(0, -34)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(3, 2, 2, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite2D/Hand01:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Sprite2D/Hand01:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.8),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(20, 4), Vector2(20, 7), Vector2(20, -8)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Sprite2D/Hand02:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Sprite2D/Hand02:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2, 0.8),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(-20, 4), Vector2(-20, 7), Vector2(-20, -8)]
}
tracks/6/type = "audio"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../AudioStreamPlayer2D")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6_rylyn")
}],
"times": PackedFloat32Array(0)
}
tracks/6/use_blend = true
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("..")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.2, 0.5, 0.8, 1.1, 1.4, 1.7, 2, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"values": [{
"args": [Vector2(10, -32)],
"method": &"explosion"
}, {
"args": [Vector2(2, -15)],
"method": &"explosion"
}, {
"args": [Vector2(-14, -36)],
"method": &"explosion"
}, {
"args": [Vector2(12, -29)],
"method": &"explosion"
}, {
"args": [Vector2(-2, -22)],
"method": &"explosion"
}, {
"args": [Vector2(2, -27)],
"method": &"explosion"
}, {
"args": [Vector2(6, -32)],
"method": &"explosion"
}, {
"args": [Vector2(8, -24)],
"method": &"explosion"
}]
}

[sub_resource type="Animation" id="Animation_ynyr4"]
resource_name = "disappear"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.6),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(0, -34), Vector2(0, -30), Vector2(0, -40)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite2D/Hand01:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Sprite2D/Hand01:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(20, 4), Vector2(20, 7), Vector2(20, 4)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Sprite2D/Hand02:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Sprite2D/Hand02:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(-20, 4), Vector2(-20, 7), Vector2(-20, 4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ks5ba"]
_data = {
"Idle": SubResource("Animation_etdke"),
"RESET": SubResource("Animation_o8j27"),
"appear": SubResource("Animation_bd22k"),
"cast_spell": SubResource("Animation_eajbo"),
"destroy": SubResource("Animation_bqut6"),
"disappear": SubResource("Animation_ynyr4")
}

[sub_resource type="Animation" id="Animation_44va4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(2, 1.25, 1.5, 1)]
}

[sub_resource type="Animation" id="Animation_5oa6y"]
resource_name = "damaged"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 1),
"transitions": PackedFloat32Array(-2, -2, -2, -2, -2, -2, -2, -2, -2, -2),
"update": 0,
"values": [Color(2, 1.25, 1.5, 1), Color(3, 2, 1.5, 1), Color(3, 2, 1.50196, 0), Color(2, 1.25, 1.5, 1), Color(3, 2, 1.50196, 0), Color(2, 1.25, 1.5, 1), Color(3, 2, 1.50196, 0), Color(2, 1.25, 1.5, 1), Color(3, 2, 1.50196, 0), Color(2, 1.25, 1.5, 1)]
}

[sub_resource type="Animation" id="Animation_d64hm"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(2, 1.25, 1.5, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j4gu3"]
_data = {
"RESET": SubResource("Animation_44va4"),
"damaged": SubResource("Animation_5oa6y"),
"default": SubResource("Animation_d64hm")
}

[node name="DarkWizardBoss" type="CharacterBody2D"]
y_sort_enabled = true
script = ExtResource("1_4pauo")
max_hp = 5

[node name="BeamAttacks" type="Node2D" parent="."]
visible = false

[node name="EB_H1" parent="BeamAttacks" instance=ExtResource("7_7c4rs")]
position = Vector2(256, 30)

[node name="EB_H2" parent="BeamAttacks" instance=ExtResource("7_7c4rs")]
position = Vector2(256, 126)

[node name="EB_H3" parent="BeamAttacks" instance=ExtResource("7_7c4rs")]
position = Vector2(257, 223)

[node name="EB_V1" parent="BeamAttacks" instance=ExtResource("7_7c4rs")]
position = Vector2(32, 125)
rotation = 1.5708

[node name="EB_V2" parent="BeamAttacks" instance=ExtResource("7_7c4rs")]
position = Vector2(144, 126)
rotation = 1.5708

[node name="EB_V3" parent="BeamAttacks" instance=ExtResource("7_7c4rs")]
position = Vector2(256, 126)
rotation = 1.5708

[node name="EB_V4" parent="BeamAttacks" instance=ExtResource("7_7c4rs")]
position = Vector2(372, 126)
rotation = 1.5708

[node name="EB_V5" parent="BeamAttacks" instance=ExtResource("7_7c4rs")]
position = Vector2(480, 126)
rotation = 1.5708

[node name="PositionTargets" type="Node2D" parent="."]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="PositionTargets"]
position = Vector2(256, 32)
texture = SubResource("GradientTexture2D_2yd2r")

[node name="Sprite2D4" type="Sprite2D" parent="PositionTargets"]
position = Vector2(481, 127)
texture = SubResource("GradientTexture2D_2yd2r")

[node name="Sprite2D2" type="Sprite2D" parent="PositionTargets"]
position = Vector2(256, 223)
texture = SubResource("GradientTexture2D_2yd2r")

[node name="Sprite2D3" type="Sprite2D" parent="PositionTargets"]
position = Vector2(33, 127)
texture = SubResource("GradientTexture2D_2yd2r")

[node name="PersistantDataHandler" type="Node" parent="."]
script = ExtResource("8_m3ade")

[node name="EnemyStateMachine" type="Node" parent="."]
script = ExtResource("9_0ueei")

[node name="Idle" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("state_after_idle")]
script = ExtResource("10_opwkl")
state_after_idle = NodePath(".")

[node name="Teleport" type="Node" parent="EnemyStateMachine"]

[node name="Destroy" type="Node" parent="EnemyStateMachine"]

[node name="BeamAttack" type="Node" parent="EnemyStateMachine"]

[node name="OrbAttack" type="Node" parent="EnemyStateMachine"]

[node name="Damaged" type="Node" parent="EnemyStateMachine"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -24)
shape = SubResource("CircleShape2D_2teca")

[node name="ShadowSprite" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_lnd1b")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(2, 1.25, 1.5, 1)
position = Vector2(0, -34)
texture = ExtResource("2_85oy2")
hframes = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_lvipt")
}
autoplay = "down"

[node name="Hand01" type="Sprite2D" parent="Sprite2D"]
position = Vector2(20, 4)
texture = ExtResource("3_okt5r")
hframes = 16

[node name="Hand02" type="Sprite2D" parent="Sprite2D"]
position = Vector2(-20, 4)
texture = ExtResource("3_okt5r")
flip_h = true
hframes = 16

[node name="Hand01_UP" type="Sprite2D" parent="Sprite2D"]
visible = false
show_behind_parent = true
position = Vector2(20, 4)
texture = ExtResource("3_okt5r")
hframes = 16
frame = 4

[node name="Hand02_UP" type="Sprite2D" parent="Sprite2D"]
visible = false
show_behind_parent = true
position = Vector2(-20, 4)
texture = ExtResource("3_okt5r")
flip_h = true
hframes = 16
frame = 4

[node name="Hand01_SIDE" type="Sprite2D" parent="Sprite2D"]
visible = false
show_behind_parent = true
position = Vector2(20, 4)
texture = ExtResource("3_okt5r")
offset = Vector2(-12, -4)
hframes = 16

[node name="Hand02_SIDE" type="Sprite2D" parent="Sprite2D"]
visible = false
position = Vector2(-20, 4)
texture = ExtResource("3_okt5r")
offset = Vector2(16, 4)
hframes = 16

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(257, 30)
energy = 0.75
texture = SubResource("GradientTexture2D_adswo")

[node name="HurtBox" type="Area2D" parent="."]
visible = false
position = Vector2(0, 16)
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("4_f8bu0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -24)
shape = SubResource("CircleShape2D_vpvgu")
debug_color = Color(0.854902, 0, 0.231373, 0)

[node name="HitBox" type="Area2D" parent="."]
visible = false
position = Vector2(0, 8)
collision_layer = 256
collision_mask = 256
script = ExtResource("5_dsruw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -32)
shape = SubResource("CircleShape2D_evgg0")
debug_color = Color(1, 0.565347, 0.133831, 0)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(257, 30)
max_polyphony = 2
bus = &"SoundFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("")
libraries = {
"": SubResource("AnimationLibrary_ks5ba")
}
autoplay = "Idle"

[node name="AnimationPlayer_Damaged" type="AnimationPlayer" parent="."]
root_node = NodePath("")
libraries = {
"": SubResource("AnimationLibrary_j4gu3")
}
